# instagram_eda

./: README.md  pyproject.toml
notebooks/: EDA.ipynb
