[tool.poetry]
name = "instagram-segmentation"
version = "0.1.0"
description = ""
authors = ["Daniel Soares <danielsoares.data@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "instagram_segmentation"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
plotly = "^5.19.0"
nbformat = "^5.9.2"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
